samples/_failures_safe/1761313858_0cc72a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fe3326b.c: In function ‘main’:
./samples/SAFE/__tmp_9fe3326b.c:157:29: error: expected ‘)’ at end of input
  157 |                 if (res == 1
      |                    ~        ^
      |                             )
./samples/SAFE/__tmp_9fe3326b.c:157:17: error: expected declaration or statement at end of input
  157 |                 if (res == 1
      |                 ^~
./samples/SAFE/__tmp_9fe3326b.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fe3326b.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fe3326b.c:157:17: error: expected declaration or statement at end of input
